...
                                  ),
                            ),
                          ),
                          Container(
                            width: 300.0,
                            child: TextFormField(
                              key: ValueKey('uniEmail_celd'),
                              controller: _model.uniEmailTextController,
                              focusNode: _model.uniEmailFocusNode,
                              autofocus: false,
                              enabled: true,
                              textInputAction: TextInputAction.next,
                              obscureText: false,
...
                                  ),
                            ),
                          ),
                          Container(
                            width: 300.0,
                            child: TextFormField(
                              key: ValueKey('pass_jwa9'),
                              controller: _model.passTextController,
                              focusNode: _model.passFocusNode,
                              autofocus: false,
                              enabled: true,
                              textInputAction: TextInputAction.done,
                              obscureText: !_model.passVisibility,
...
                            ),
                          ),
                        ].divide(SizedBox(height: 4.0)),
                      ),
                    ),
                    FFButtonWidget(
                      key: ValueKey('signInButton_vxws'),
                      onPressed: () async {
                        logFirebaseEvent('LOGIN_PAGE_signInButton_ON_TAP');
                        logFirebaseEvent('signInButton_auth');
                        GoRouter.of(context).prepareAuthEvent();

                        final user = await authManager.signInWithEmail(
...
